--- a/core/gcc/build
+++ b/core/gcc/build
@@ -1,64 +1,93 @@
 #!/bin/sh -uxe
 
-# Fix gccgo breaking in go bootstrap.
-# See github.com/golang/go/issues/47771 for details.
-#patch -d gcc -p1 -i ../7edb992d8195572e2c823fedab319eb6cb2f0f32.patch
-
 # Do not run fixinclude
 sed -i "s|\./fixinc\.sh|-c true|" gcc/gcc/Makefile.in
 
 # Use lib not lib64 by default
 sed -i '/m64=/s/lib64/lib/' gcc/gcc/config/i386/t-linux64
-sed -i 's/lib64/lib/' gcc/gcc/config/i386/linux64.h
 
 unset CC
 unset CXX
 unset CPP
 unset LD
 
-export CFLAGS="-march=native -mtune=native -O3 -fgraphite -floop-nest-optimize"
-unset CPPFLAGS
-export CXXFLAGS="$CFLAGS"
-unset LDFLAGS
+mkdir -p gcc-build
+mkdir -p libgccjit-build
 
-mkdir -p build
-cd build
+export confflags=(
+    --prefix=/usr 
+    --libdir=/usr/lib
+    --libexecdir=/usr/lib
+    --mandir=/usr/share/man 
+    --infodir=/usr/share/info 
+    --with-bugurl=https://github.com/mdartmann/mkiss/issues 
+    --with-linker-hash-style=gnu 
+    --with-system-zlib 
+    --enable-__cxa-atexit 
+    --enable-cet=auto 
+    --enable-ehcking=release 
+    --enable-clocale=gnu 
+    --enable-default-pie 
+    --enable-default-ssp 
+    --enable-gnu-indirect-function 
+    --enable-gnu-unique-object 
+    --enable-linker-build-id 
+    --enable-lto 
+    --enable-multi-arch 
+    --enable-plugin
+    --enable-shared 
+    --enable-threads=posix 
+    --disable-libssp 
+    --disable-libstdcxx-pch 
+    --disable-werror 
+    --with-build-config=bootstrap-lto 
+    --enable-link-serialization=1 
+)
 
-export libat_cv_have_ifunc=yes
+cd gcc-build
+
+export CFLAGS=${CFLAGS/-Werror=format-security}
+export CXXFLAGS=${CXXFLAGS/-Werror=format-security}
+
 ../gcc/configure \
-    --prefix=/usr \
-    --libexecdir=/usr/libexec \
-    --mandir=/usr/share/man \
-    --infodir=/usr/share/info \
-    --with-bugurl=https://github.com/mdartmann/mkiss/issues \
-    --with-linker-hash-style=gnu \
-    --with-system-zlib \
-    --enable-__cxa-atexit \
-    --enable-cet=auto \
-    --enable-ehcking=release \
-    --enable-clocale=gnu \
-    --enable-default-pie \
-    --enable-default-ssp \
-    --enable-gnu-indirect-function \
-    --enable-gnu-unique-object \
-    --enable-linker-build-id \
-    --enable-lto \
-    --enable-shared \
-    --enable-threads=posix \
-    --disable-libssp \
-    --disable-libstdcxx-pch \
-    --disable-werror \
-    --disable-multilib \
-    --with-build-config=bootstrap-lto \
-    --enable-link-serialization=1 \
-    --enable-languages=c,c++,fortran,go,lto,objc,obj-c++
+    --enable-languages=c,c++,fortran,go,lto,objc,obj-c++ \
+    --enable-bootstrap \
+    ${confflags[@]}
 
-make
+make -O \
+    STAGE1_CFLAGS="-O2" \
+    BOOT_CFLAGS="$CFLAGS" \
+    BOOT_LDFLAGS="$LDFLAGS" \
+    LDFLAGS_FOR_TARGETS="$LDFLAGS" \
+    bootstrap
+
+make -O
+make -O -C $CHOST/libstdc++-v3/doc doc-man-doxygen
+
+# build libgccjit separately for better performance
+cd ../libgccjit-build
+
+../gcc/configure \
+    --enable-languages=jit \
+    --disable-bootstrap \
+    --enable-host-shared
+
+make -O \
+    STAGE1_CFLAGS="-O2" \
+    BOOT_CFLAGS="$CFLAGS" \
+    BOOT_LDFLAGS="$LDFLAGS" \
+    LDFLAGS_FOR_TARGETS="$LDFLAGS" \
+    all-gcc
+
+cp -a gcc/libgccjit.so* ../gcc-build/gcc/
+
+cd ../gcc-build
 make DESTDIR="$1" install
+make -C $CHOST/libstdc++-v3/doc doc-install-man
 
 # Add LTO
 install -vdm755 "$1/usr/lib/bfd/plugins"
-ln -sfv ../../libexec/gcc/$(cc -dumpmachine)/$2/liblto_plugin.so \
+ln -sfv ../../gcc/$(cc -dumpmachine)/$2/liblto_plugin.so \
 	"$1/usr/lib/bfd/plugins/liblto_plugins.so"
 
 ln -s gcc "$1/usr/bin/cc"
