--- a/core/linux-kernel/files/config
+++ b/core/linux-kernel/files/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 5.19.0-rc5 Kernel Configuration
+# Linux/x86 5.19.0-rc6 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 12.1.0"
 CONFIG_CC_IS_GCC=y
