mkissconfig: 0.4.1, specify PKG_CONFIG_LIBDIR manually when needed
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/mkissconfig/version
	modified:   multilib/lib32-ncurses/build
	modified:   multilib/lib32-ncurses/version

--- a/multilib/lib32-ncurses/build
+++ b/multilib/lib32-ncurses/build
@@ -1,6 +1,7 @@
 #!/bin/sh -uxe
 
 source /etc/kiss-flags/multilib.sh
+export PKG_CONFIG_LIBDIR='/usr/lib32/pkgconfig'
 
 for i in *.patch; do
     patch -Np1 -i $i
