pkgconf: add personality configs
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   core/pkgconf/build
	modified:   core/pkgconf/checksums
	new file:   core/pkgconf/files/i686-pc-linux-gnu.personality
	new file:   core/pkgconf/files/x86_64-pc-linux-gnu.personality
	modified:   core/pkgconf/sources
	modified:   core/pkgconf/version

--- a/core/pkgconf/build
+++ b/core/pkgconf/build
@@ -4,7 +4,16 @@ export DESTDIR="$1"
 meson build \
 	$MESON_OPTIONS \
 	-D tests=false
+
 ninja -C build
 ninja -C build install
 
+install -Dt "$1"/usr/share/pkgconfig/personality.d -m644 \
+    i686-pc-linux-gnu.personality \
+    x86_64-pc-linux-gnu.personality
+
 ln -s pkgconf "$1/usr/bin/pkg-config"
+ln -s pkgconf "$1/usr/bin/i686-pc-linux-gnu-pkg-config"
+ln -s pkgconf "$1/usr/bin/x86_64-pc-linux-gnu-pkg-config"
+
+ln -s pkgconf.1 "$1"/usr/share/man/man1/pkg-config.1
