switch to libglvnd for libGL.so, mesa relbump
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	new file:   gui/libglvnd/build
	new file:   gui/libglvnd/sources
	new file:   gui/libglvnd/version
	modified:   gui/mesa/build
	modified:   gui/mesa/version

--- a/gui/mesa/build
+++ b/gui/mesa/build
@@ -25,6 +25,7 @@ meson build \
     -D gles1=disabled \
     -D gles2=enabled \
     -D glx=dri \
+    -D glvnd=true \
     -D libunwind=enabled \
     -D llvm=enabled \
     -D shared-llvm=enabled \
