--- a/extra/benchmark/build
+++ b/extra/benchmark/build
@@ -1,6 +1,9 @@
 #!/bin/sh -uxe
 export DESTDIR="$1"
 
+export CFLAGS+=" -flto=auto -ffat-lto-objects"
+export CXXFLAGS+=" -flto=auto -ffat-lto-objects"
+
 cmake -B build -G Ninja \
     -D CMAKE_BUILD_TYPE=None \
     -D CMAKE_CXX_FLAGS="${CXXFLAGS} -DNDEBUG" \
