dhcp: add systemd files
Signed-off-by: Mae Dartmann <hello@maedartmann.name>

 Changes to be committed:
	modified:   extra/dhcp/build
	modified:   extra/dhcp/checksums
	new file:   extra/dhcp/files/dhclient@.service
	new file:   extra/dhcp/files/dhcp-sysusers.conf
	new file:   extra/dhcp/files/dhcp-tmpfiles.conf
	new file:   extra/dhcp/files/dhcpd4.service
	new file:   extra/dhcp/files/dhcpd6.service
	modified:   extra/dhcp/sources
	modified:   extra/dhcp/version

--- a/extra/dhcp/build
+++ b/extra/dhcp/build
@@ -21,3 +21,9 @@ make DESTDIR="$1" install
 mv "$1/etc/dhcpd.conf.example" "$1/etc/dhcpd.conf"
 
 install -Dm644 doc/examples/dhcpd-dhcpv6.conf "$1/etc/dhcpd6.conf"
+
+mkdir -p "$1"/usr/lib/{systemd/system,tmpfiles.d,sysusers.d}
+install -Dm644 "dhcp-sysusers.conf" "${1}/usr/lib/sysusers.d/dhcp.conf"
+install -Dm644 "dhcp-tmpfiles.conf" "${1}/usr/lib/tmpfiles.d/dhcp.conf"
+install -Dm644 "dhcpd4.service" "${1}/usr/lib/systemd/system/dhcpd4.service"
+install -Dm644 "dhcpd6.service" "${1}/usr/lib/systemd/system/dhcpd6.service"
