--- a/gnome/uhttpmock/build
+++ b/gnome/uhttpmock/build
@@ -1,7 +1,9 @@
 #!/bin/sh -uxe
+export DESTDIR="$1"
 
-./configure \
-    --prefix=/usr
+meson build \
+    ${MESON_OPTIONS} \
+    -D introspection=false
 
-make
-make DESTDIR="$1" install
+ninja -C build
+ninja -C build install
